Adding texts for source watcher class to us yml, adding headers method to api reader, adding more unit tests for api reader

--- a/resources/Locales/translations_en_US.yml
+++ b/resources/Locales/translations_en_US.yml
@@ -1,6 +1,10 @@
 Coco:
   SourceWatcher:
     Core:
+      SourceWatcher:
+        Extractor_Not_Found: The extractor %s can't be found.
+        Transformer_Not_Found: The transformer %s can't be found.
+        Loader_Not_Found: The loader %s can't be found.
       Api:
         ApiReader:
           No_Resource_URL_Found: No resource URL found.
