Adding unit tests for connection classes and adding more texts to en_US yml file

--- a/resources/Locales/translations_en_US.yml
+++ b/resources/Locales/translations_en_US.yml
@@ -4,6 +4,10 @@ Coco:
       Api:
         ApiReader:
           No_Resource_URL_Found: No resource URL found.
+      Database:
+        Connections:
+          MySqlConnector:
+            No_Table_Name_Found: No table name found.
       Extractors:
         JsonExtractor:
           No_Input_Provided: An input must be provided.
