--- a/resources/Locales/translations_en_US.yml
+++ b/resources/Locales/translations_en_US.yml
@@ -8,6 +8,7 @@ Coco:
         Connections:
           MySqlConnector:
             No_Table_Name_Found: No table name found.
+            Connection_Object_Not_Connected_Cannot_Insert: The connection object is not connected. Can't insert into the table.
       Extractors:
         JsonExtractor:
           No_Input_Provided: An input must be provided.
