Changes for connection methods and extra unit tests

--- a/resources/Locales/translations_en_US.yml
+++ b/resources/Locales/translations_en_US.yml
@@ -6,11 +6,9 @@ Coco:
           No_Resource_URL_Found: No resource URL found.
       Database:
         Connections:
-          ClientServerDatabaseConnector:
+          Connector:
             No_Table_Name_Found: No table name found.
             Connection_Object_Not_Connected_Cannot_Insert: The connection object is not connected. Can't insert into the table.
-          EmbeddedDatabaseConnector:
-            No_Table_Name_Found: No table name found.
             Unexpected_Error: Something unexpected went wrong while trying to insert the row
       Extractors:
         JsonExtractor:
