Adding more unit tests for Watcher classes

--- a/resources/Locales/translations_en_US.yml
+++ b/resources/Locales/translations_en_US.yml
@@ -24,3 +24,10 @@ Coco:
       Utils:
         i18nTest:
           This_Is_A_Test_Entry: This is a test entry!
+    Watcher:
+      Communicator:
+        SlackCommunicator:
+          No_Web_Hook: A web hook url must be defined first.
+          No_Method: A method must be defined first.
+          No_Content_Type: A content type be defined first.
+          No_Data: Data must be defined first.
